// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="css-1iidv1d sc-ifAKCX bGvnLz"
  onClick={[Function]}
>
  C
</button>
`;

exports[`Storyshots Button with text 1`] = `
<button
  className="css-17uq09k sc-ifAKCX bGvnLz"
  onClick={[Function]}
>
  xoxo
</button>
`;
